# MonteCarloMultiGPU

guided_MonteCarloMultiGPU_SYCLMigration/: README.md
guided_MonteCarloMultiGPU_SYCLMigration/01_dpct_output/: CMakeLists.txt
guided_MonteCarloMultiGPU_SYCLMigration/02_sycl_migrated/: CMakeLists.txt
